--- a/example/basic/dashboard.html
+++ b/example/basic/dashboard.html
@@ -13,7 +13,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
     <!-- #ATTN This is JS library for the OfteKey. You have to load this and then initialize it (see below) -->
-    <script src="https://gitlab.com/ofte/code/raw/master/js/ofte.js"></script>
+    <script src="https://glcdn.githack.com/ofte/code/raw/master/js/ofte.js"></script>
     
     <style>
         .hidden {
