--- a/example/admin/web-app/index.html
+++ b/example/admin/web-app/index.html
@@ -107,6 +107,7 @@
         Vue.use(VueRouter)
         Vue.use(VueGoogleMaps, {
             // Please use your own Google Maps API key ;)
+            // This one will only load data if served from *.ofte.io domains...
             load: {
                 key: 'AIzaSyCmjxYcPpSGTs9-OPXSr_cOeiZLmx5OJ_U'
             }
